preSigil-0.9.6
   Bug Fixes
    - Make StdWarningDialog resizeable when "Show Details" is used
    - Fix CleanSource svg prefix removal bug that sometimes broke valid svg code 
    - Remove svg image and html5 menuitem from the list of void elements in the Sigil and plugin code
    - Properly xml escape "&" in metadata attribute values

Sigil-0.9.5
   Bug Fixes
    - Fix regression when ImportHTML in gathering HTML based DC. metadata
    - Fix regression - remove incorrect use of opf:scheme from dc:creator and dc:contributor under epub2
    - Fix regression - the guide reference tag is always a void tag
    - Fix issues with hunspell spell checking under Windows when non-ascii paths to dictionaries
    - Fix issues with overridding the prefs directory on Windows with non-ascii paths
    - Fix broken manual "Check" button on W3C stylesheet validation's generated html form.
    - Fix media-type recognition for .m4a and .m4v file extenstions in main Sigil and plugin code
    - Treat ruby and rt as inline tags when pretty-printing in Sigils and for plugins

   New Features
    - Allow user to choose what level of CSS gets used in the "Validate Stylesheets
         With W3C" tool via user preference (General).

Sigil-0.9.4
   Bug Fixes
    - Prevent the use of zero length key fields when obfuscating fonts
    - IDPF font obfuscation key accepts all input except as specified
    - Fix typo in main.ui accelerator assignment
    - Update Transifex project URL
    - Prevent NCX Weirdness with ampersand added when editing NCX in codeview and TOC widget showing
    - Fix lost namespace attributes on metadata tag
    - Allow auto conversion from package version 1.0 to 2.0
    - Remove unused parameter from gumbo create_text_node
    - Fix bug that hits package version when no xml declaration on opf on import
    - Add id to Heading structure to greatly speed up NCX/TOC creation even more
    - Only the true nav should ever have the nav manifest property set